check return from fwrite  SERVER-1578